fixed header on mobile

--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -3,17 +3,7 @@
   @apply max-h-0 md:max-h-full overflow-hidden;
   transition: max-height .3s ease;
 }
-input#nav-toggle:checked ~ label#show-button {
-  @apply hidden;
-}
 
-input#nav-toggle:checked ~ label#hide-button {
-  @apply flex md:hidden;
-}
-
-input#nav-toggle:checked ~ #nav-menu {
-  @apply max-h-[1000px] md:flex;
-}
 
 .header {
   @apply bg-white py-[9px] px-4 md:px-0;
